--- a/wercker-step.yml
+++ b/wercker-step.yml
@@ -1,3 +1,3 @@
 name: git-push
-version: 0.0.0
-description: push git branch to remote.
+version: 0.0.1
+description: push git branch, can specify custom remote.
